slideshow, fixed padding-top on panel, aligned nav links on mobile size

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h3 {
 }
 
 .logo img {
-  width: 60px;
+  width: 50px;
   height: auto;
 }
 
@@ -107,7 +107,7 @@ h3 {
 
 @media (min-width: 580px) {
   .panel {
-    padding-top: 287px;
+    padding-top: 22.5rem;
   }
 }
 
@@ -118,6 +118,12 @@ h3 {
 @media (min-width: 580px) {
   .mainDoc {
     margin-left: 160px;
+  }
+}
+
+@media (min-width: 500px) {
+  .doc .jumbo {
+    padding: 2.5rem 6rem;
   }
 }
 
@@ -139,7 +145,7 @@ section {
 
 @media (min-width: 580px) {
   .mainDoc h2#typography {
-    padding-top: 31rem;
+    padding-top: 24rem;
   }
 }
 
@@ -154,9 +160,9 @@ section {
 
 @media (min-width: 580px) {
   .mainDoc h2.anchor:before {
-    height: 31rem;
+    height: 24rem;
     /* fixed header height*/
-    margin: -31rem 0 0;
+    margin: -24rem 0 0;
     /* negative fixed header height */
   }
 }
@@ -310,6 +316,10 @@ article {
   margin-left: 1.5rem;
 }
 
+#slideshow figure {
+  margin-bottom: 5rem;
+}
+
 header {
   background-color: #fefffa;
 }
@@ -391,6 +401,7 @@ header nav ul li a {
   font-weight: bold;
   display: block;
   padding: 12px 10px;
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -407,7 +418,7 @@ header nav ul li a {
     justify-content: center;
     align-items: center;
     width: 120px;
-    height: 90px;
+    height: 60px;
   }
   header nav ul li a.logo {
     padding: 0;
@@ -490,6 +501,14 @@ header nav ul li a {
 
 .panel li {
   margin: .5rem 1rem;
+}
+
+.panel li a {
+  color: #000;
+}
+
+.panel li a:hover {
+  color: #d4c9c5;
 }
 
 .searchBox.activeSearch {
@@ -1098,7 +1117,8 @@ input, select, textarea {
 }
 
 .smBtn:hover {
-  background-color: #3e8e41;
+  color: #fff;
+  background-color: purple;
 }
 
 .smBtn:active {
@@ -1121,7 +1141,8 @@ input, select, textarea {
 }
 
 .mdBtn:hover {
-  background-color: #3e8e41;
+  color: #fff;
+  background-color: purple;
 }
 
 .mdBtn:active {
@@ -1144,7 +1165,8 @@ input, select, textarea {
 }
 
 .lgBtn:hover {
-  background-color: #3e8e41;
+  color: #fff;
+  background-color: purple;
 }
 
 .lgBtn:active {
@@ -1186,61 +1208,90 @@ input, select, textarea {
   overflow: hidden;
 }
 
-/* Slideshow */
-.slideshow ul#slides {
-  list-style-type: none;
-  max-width: 650px;
-  max-height: 365px;
-  height: auto;
-  padding: 0;
-  margin: 0;
-  position: relative;
+/* SLIDESHOW */
+.mySlides {
+  display: none;
 }
 
-.slideshow img {
-  max-width: 100%;
-  height: auto;
-}
-
-.slideshow li.slide {
+.mySlides img {
+  vertical-align: middle;
   width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  padding: 0;
-  opacity: 0;
-  transition: opacity 1s;
 }
 
-.slideshow li.showing {
-  opacity: 1;
-  z-index: 2;
-}
-
-.slideshow .controller {
-  background-color: #333;
+/* Slideshow container */
+.slideshow {
+  max-width: 1000px;
   position: relative;
-  max-width: 650px;
-  width: 100%;
-  border-right: solid 4px #333;
-  border-left: solid 4px #333;
-  display: flex;
-  justify-content: center;
+  margin: auto;
 }
 
-.slideshow .controls {
-  font-size: 30px;
-  color: #fff;
-  background: none;
-  border: none;
-  outline: none;
+/* Next & previous buttons */
+.prev, .next {
   cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
-@media (min-width: 674px) {
-  .slideshow .controls {
-    border: none;
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media (min-width: 0) and (max-width: 300px) {
+  .prev, .next, .text {
+    font-size: 11px;
   }
 }
